--- a/app/views/diarios/new.html.erb
+++ b/app/views/diarios/new.html.erb
@@ -14,7 +14,7 @@
 </div>
 
 <!-- Formulário -->
-<div class="flex flex-col items-center bg-gray-200/25 rounded-xl max-w-4xl w-full p-6 shadow-md mt-6">
+<div class="flex flex-col items-center rounded-xl max-w-4xl w-full p-6 shadow-md mt-6">
   <%= render "form", diario: @diario %>
 </div>
 
