--- a/app/views/diarios/_form.html.erb
+++ b/app/views/diarios/_form.html.erb
@@ -37,7 +37,7 @@
       ["💪 Exercício", :exercicio],
       ["📚 Leitura", :leitura],
       ["🥗 Alimentação", :alimentacao],
-      ["😴 Maconha", :maconha],
+      ["🌿 Maconha", :maconha],
       ["🍺 Álcool", :alcool]
     ].each do |label, field| %>
 
