--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -53,5 +53,6 @@
 
 <!-- Overlay para mobile -->
 <div id="menu-overlay"
-     class="fixed inset-0 z-40 "></div>
+     class="fixed inset-0 z-40 ">
+</div>
 
