--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,11 @@
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-    
+
   <body class="bg-gray-100 text-gray-800 min-h-screen flex flex-col">
-    
-    <%= render "layouts/sidebar" %>
-    
+
+    <%# <%= render "layouts/sidebar" %> %>
+
     <!-- Conteúdo principal -->
     <div id="main-content" class="transition-all duration-300 ml-0">
     <main class="flex-grow container mx-auto max-w-3xl p-4">
